chore: Add GitHub Copilot extension to devcontainer.json

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -17,7 +17,8 @@
         "VisualStudioExptTeam.intellicode-api-usage-examples",
         "Postman.postman-for-vscode",
         "vinliao.fast-arrow",
-        "dsznajder.es7-react-js-snippets"
+        "dsznajder.es7-react-js-snippets",
+        "GitHub.copilot"
       ]
     }
   }
